# Git_CiCd

./: .coverage  .gitlab-ci.yml  README.MD  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
tests/: test_main.py
